off canvas stuff

--- a/css/base/_btn.scss
+++ b/css/base/_btn.scss
@@ -1,7 +1,7 @@
 ﻿.btn {
     background: $color-medium-lite;
     display: inline-block;
-    padding: $xsm-spacing;
+    padding: $xsm-sizing;
     box-sizing: border-box;
     text-decoration: none;
     border-radius: .2rem;
