--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -1,12 +1,13 @@
 ﻿// sizes
 $base-size: 16px;
 
-$xsm-spacing: .5rem;
-$sm-spacing: .75rem;
-$md-spacing: 1rem;
-$lg-spacing: 1.5rem;
-$xlg-spacing: 2rem;
-$xxlg-spacing: 3rem;
+$xsm-sizing: .5rem;
+$sm-sizing: .75rem;
+$md-sizing: 1rem;
+$lg-sizing: 1.5rem;
+$xlg-sizing: 2rem;
+$xxlg-sizing: 2.75rem;
+$xxxlg-sizing: 4rem;
 $half: 50%;
 
 // font
