--- a/css/main.scss
+++ b/css/main.scss
@@ -11,3 +11,22 @@
 @import 'components/_site-header.scss';
 @import 'components/_site-nav.scss';
 @import 'components/_background-image.scss';
+
+/*.time-crop {
+    margin-bottom: 18px;
+    display: block;
+    height: 75px;
+    overflow:hidden;
+}*/
+
+.time {
+    display: block;
+    position: relative;
+    margin: 0 auto 18px;
+    height: 200px;
+    width: 200px;
+    background-image: url(../images/time-c.jpg);
+    border-radius: 24rem;
+    transition: all 300ms ease-in;
+    box-shadow: inset 0px 0px 0px 5px rgba(225,225,225, .5)
+}
