--- a/css/components/_background-image.scss
+++ b/css/components/_background-image.scss
@@ -17,6 +17,11 @@
             background-attachment: fixed;
         }
     }
+    &.scroll {
+        @media screen and (min-width: 768px) {
+            background-attachment: scroll;
+        }
+    }
     &.aurora-borealis {
         // ratio mobile
         @media (-webkit-min-device-pixel-ratio: 2) and (min-device-width: 320px), (min-device-width: 736px) {
