--- a/css/components/_site-header.scss
+++ b/css/components/_site-header.scss
@@ -4,19 +4,18 @@
     top: 0;
     left: 0;
     z-index: 2;
-    width: 100%;
     box-sizing: border-box;
-    @media screen and (min-width: 250px) {
-        text-align: center;
-        padding: 15px 30px;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+    .header-logo {
+        font-size: 26px;
+        font-family: 'Droid Sans', sans-serif;
     }
-
     @media screen and (min-width: 768px) {
         text-align: left;
         padding: 25px 20px;
+        width: auto;
         
-        .header-logo {
-            font-size: 26px;
-        }
     }
 }
