--- a/css/prototype.css
+++ b/css/prototype.css
@@ -1,4 +1,5 @@
-﻿/*@mixin bp-large {
+﻿@charset "UTF-8";
+/*@mixin bp-large {
   @media only screen and (max-width: 60em) {
     @content;
   }
@@ -36,7 +37,7 @@
 }*/
 html {
   font-size: 16px;
-  font-family: 'Droid Sans', sans-serif;
+  font-family: 'Sumana', serif;
   color: #484848; }
   @media screen and (min-width: 300px) {
     html {
@@ -48,16 +49,27 @@ body {
   overflow-x: hidden; }
 
 .heading, h1, h2, h3, h4 {
-  margin: 0; }
+  margin: 0;
+  font-family: 'Droid Sans', sans-serif; }
 
 h1 {
   font-size: 2.75rem; }
+
+h3 {
+  font-size: 2rem; }
 
 /*p {
   font-size: .75rem;
 }*/
 ul li {
-  margin-bottom: 1rem; }
+  margin-bottom: 0.75rem;
+  list-style: none;
+  position: relative; }
+  ul li:before {
+    content: '●';
+    position: absolute;
+    top: 0;
+    left: -20px; }
 
 a {
   color: #408CCC; }
@@ -150,16 +162,16 @@ ul.clear-styles, ul.clear-styles li {
   margin-left: 2rem; }
 
 .margin-xxlg-top {
-  margin-top: 3rem; }
+  margin-top: 2.75rem; }
 
 .margin-xxlg-right {
-  margin-right: 3rem; }
+  margin-right: 2.75rem; }
 
 .margin-xxlg-bottom {
-  margin-bottom: 3rem; }
+  margin-bottom: 2.75rem; }
 
 .margin-xxlg-left {
-  margin-left: 3rem; }
+  margin-left: 2.75rem; }
 
 .background-image {
   background-repeat: no-repeat; }
@@ -174,6 +186,9 @@ ul.clear-styles, ul.clear-styles li {
   @media screen and (min-width: 768px) {
     .background-image.fixed {
       background-attachment: fixed; } }
+  @media screen and (min-width: 768px) {
+    .background-image.scroll {
+      background-attachment: scroll; } }
   @media (-webkit-min-device-pixel-ratio: 2) and (min-device-width: 320px), (min-device-width: 736px) {
     .background-image.aurora-borealis {
       background-image: url(../images/aurora-borealis/aurora-borealis.jpeg); } }
