--- a/css/prototypes/responsive-carousel.css
+++ b/css/prototypes/responsive-carousel.css
@@ -79,42 +79,6 @@ a {
 img {
   max-width: 100%; }
 
-.btn {
-  background: #F0F0F0;
-  display: inline-block;
-  padding: 0.5rem;
-  box-sizing: border-box;
-  text-decoration: none;
-  border-radius: .2rem; }
-  .btn.btn-block {
-    display: block; }
-
-section {
-  padding: 2rem;
-  width: 100%;
-  box-sizing: border-box;
-  position: relative; }
-  section > p {
-    margin-top: 0; }
-  section.vh75 {
-    height: 75vh; }
-  section.vh50 {
-    height: 50vh; }
-
-.hero {
-  position: absolute;
-  left: 50%;
-  width: 320px;
-  margin-left: -160px;
-  text-align: center;
-  top: 0;
-  transform: scale(0.75); }
-  @media screen and (min-width: 768px) {
-    .hero {
-      width: 578px;
-      margin-left: -284px;
-      top: 15%; } }
-
 .color-invert {
   color: #fff; }
 
@@ -209,107 +173,6 @@ ul.clear-styles, ul.clear-styles li {
 .margin-xxlg-left {
   margin-left: 2.75rem; }
 
-.off-canvas-trigger {
-  display: none; }
-
-@media screen and (min-width: 250px) and (max-width: 760px) {
-  .off-canvas {
-    padding-top: 50px;
-    position: relative;
-    transform: translate3d(0, 0, 0);
-    transition: transform 500ms ease; }
-    .off-canvas .off-canvas-trigger {
-      position: absolute;
-      display: table-cell;
-      left: 0;
-      top: 0;
-      text-decoration: none;
-      padding: 13px;
-      background: #484848;
-      color: #F0F0F0;
-      height: 50px;
-      width: 50px;
-      box-sizing: border-box;
-      vertical-align: middle; }
-    .off-canvas .site-nav {
-      position: absolute;
-      height: 100%;
-      left: -50%;
-      width: 50%;
-      top: 0; }
-    .off-canvas.open {
-      transform: translate3d(50%, 0, 0);
-      transition: transform 500ms ease; }
-      .off-canvas.open .off-canvas-trigger {
-        opacity: 1;
-        transition: opacity 400ms ease-in;
-        background: #FF6F69; } }
-
-@media screen and (min-width: 768px) {
-  .off-canvas {
-    padding-top: 80px; } }
-
-.site-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  box-sizing: border-box;
-  text-align: center;
-  padding: 10px;
-  width: 100%; }
-  .site-header .header-logo {
-    font-size: 26px;
-    font-family: 'Droid Sans', sans-serif; }
-  @media screen and (min-width: 768px) {
-    .site-header {
-      text-align: left;
-      padding: 25px 20px;
-      width: auto; } }
-
-.site-nav .btn {
-  margin-right: 5px; }
-  .site-nav .btn:before {
-    content: '';
-    display: block;
-    height: 5px;
-    width: 0;
-    position: absolute;
-    left: 50%;
-    top: 0;
-    opacity: 0;
-    transition: all 300ms ease-in;
-    background-image: -o-linear-gradient(left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%);
-    background-image: -moz-linear-gradient(left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%);
-    background-image: -webkit-linear-gradient(left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%);
-    background-image: -ms-linear-gradient(left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%);
-    background-image: linear-gradient(to left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%); }
-  .site-nav .btn:hover:before {
-    transition: all 300ms ease-in;
-    width: 100%;
-    left: 0;
-    opacity: 1; }
-  .site-nav .btn.link-resume:hover:before {
-    background: #408CCC; }
-  .site-nav .btn.link-prototypes:hover:before {
-    background: #96CEB4; }
-
-@media screen and (max-width: 760px) {
-  .site-nav .btn {
-    width: 100%; } }
-
-@media screen and (min-width: 768px) {
-  .site-nav {
-    padding: 20px 240px;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: #fff;
-    box-sizing: border-box;
-    z-index: 2; } }
-
 .background-image {
   background-repeat: no-repeat; }
   .background-image.size-cover {
@@ -354,20 +217,51 @@ ul.clear-styles, ul.clear-styles li {
     .background-image.banner-one {
       background-image: url(/images/banner-one/Image-Test_2000x2000_q8.jpg); } }
 
-/*.time-crop {
-    margin-bottom: 18px;
-    display: block;
-    height: 75px;
-    overflow:hidden;
-}*/
-.time {
-  display: block;
-  position: relative;
-  margin: 0 auto 18px;
-  height: 200px;
-  width: 200px;
-  background-image: url(../images/time-c.jpg);
-  border-radius: 24rem;
-  transition: all 300ms ease-in;
-  box-shadow: inset 0px 0px 0px 5px rgba(225, 225, 225, 0.5); }
+body {
+  background: #dcf2f9;
+  padding-top: 60px; }
+
+.border-box, .header-sticky, .carousel, footer {
+  box-sizing: border-box; }
+
+.header-sticky {
+  width: 100%;
+  height: 60px;
+  top: 0;
+  padding: 20px 0 0 10px;
+  background: #fff;
+  box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.15);
+  position: fixed;
+  z-index: 1; }
+
+.header-ad {
+  text-align: center; }
+  .header-ad div {
+    margin: 0 auto;
+    background: #FF6F69; }
+    @media (min-width: 320px) {
+      .header-ad div {
+        width: 320px;
+        height: 35px;
+        padding: 15px 0 0; } }
+    @media (min-width: 768px) {
+      .header-ad div {
+        width: 728px;
+        height: 55px;
+        padding: 35px 0 0; } }
+
+.carousel {
+  background: #F0F0F0;
+  padding: 10px;
+  text-align: center; }
+  @media (min-width: 320px) {
+    .carousel {
+      height: calc(100vh - 110px); } }
+  @media (min-width: 768px) {
+    .carousel {
+      height: calc(100vh - 150px); } }
+
+footer {
+  background: #FFCC5C;
+  padding: 10px; }
 
