--- a/css/components/_site-nav.scss
+++ b/css/components/_site-nav.scss
@@ -1,5 +1,12 @@
 ﻿.site-nav {
-    
+    position: fixed;
+    width: $half;
+    top: 0;
+    transition: all 500ms ease;
+    opacity: 0;
+    transition: all 700ms ease;
+    left: -50%;
+
     .btn {
         margin-right: 5px;
         &:before {
@@ -36,21 +43,35 @@
             }
         }
     }
-    @media screen and (max-width: 760px) {
+
+
+    @include bp(mobile) { 
+        height: 100%;
         .btn {
             width: 100%;
         }
     }
-
-    @media screen and (min-width: 768px) {
+    @include bp(tablet) { 
         padding: 20px 240px;
         text-align: center;
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
-        background: #fff;
         box-sizing: border-box;
-        z-index: 2;
+        z-index: 3;
+        opacity: 1;
     }
+    @include bp(desktop) { 
+        padding: 20px 240px;
+        text-align: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        box-sizing: border-box;
+        z-index: 3;
+        opacity: 1;
+    }
+
 }
