--- a/css/main.css
+++ b/css/main.css
@@ -181,37 +181,28 @@ ul.clear-styles, ul.clear-styles li {
     padding-top: 50px;
     position: relative;
     transform: translate3d(0, 0, 0);
-    transition: transform 500ms ease; }
-    .off-canvas .off-canvas-trigger {
-      position: absolute;
-      display: table-cell;
-      left: 0;
-      top: 0;
-      text-decoration: none;
-      padding: 13px;
-      background: #484848;
-      color: #F0F0F0;
-      height: 50px;
-      width: 50px;
-      box-sizing: border-box;
-      vertical-align: middle; }
-    .off-canvas .site-nav {
-      position: absolute;
-      height: 100%;
-      left: -50%;
-      width: 50%;
-      top: 0; }
-    .off-canvas.open {
-      transform: translate3d(50%, 0, 0);
-      transition: transform 500ms ease; }
-      .off-canvas.open .off-canvas-trigger {
-        opacity: 1;
-        transition: opacity 400ms ease-in;
-        background: #FF6F69; } }
+    transition: transform 500ms ease; } }
 
 @media screen and (min-width: 768px) {
   .off-canvas {
     padding-top: 80px; } }
+
+body.open .site-header, body.open .off-canvas {
+  transform: translate3d(50%, 0, 0);
+  transition: transform 500ms ease; }
+
+body.open .off-canvas {
+  box-shadow: #888 0 0 10px 0; }
+
+body.open .site-nav {
+  opacity: 1;
+  transition: all 500ms ease;
+  left: 0; }
+
+body.open .off-canvas-trigger {
+  opacity: 1;
+  transition: opacity 700ms ease-in;
+  background: #FF6F69; }
 
 .site-header {
   position: fixed;
@@ -221,58 +212,106 @@ ul.clear-styles, ul.clear-styles li {
   box-sizing: border-box;
   text-align: center;
   padding: 10px;
-  width: 100%; }
+  width: 100%;
+  background: #fff;
+  overflow: hidden;
+  transform: translate3d(0, 0, 0);
+  transition: transform 500ms ease;
+  box-shadow: #888888 0px 0px 10px 0px; }
   .site-header .header-logo {
     font-size: 26px;
     font-family: 'Droid Sans', sans-serif; }
-  @media screen and (min-width: 768px) {
+  .site-header .off-canvas-trigger {
+    position: absolute;
+    display: table-cell;
+    left: 0;
+    top: 0;
+    text-decoration: none;
+    padding: 13px;
+    background: #484848;
+    color: #F0F0F0;
+    height: 50px;
+    width: 50px;
+    box-sizing: border-box;
+    vertical-align: middle; }
+  @media (max-width: 736px) {
+    .site-header {
+      background: #fff;
+      height: 50px; } }
+  @media (min-width: 737px) and (max-width: 1280px) {
     .site-header {
       text-align: left;
-      padding: 25px 20px;
-      width: auto; } }
+      padding: 25px 20px; }
+      .site-header .off-canvas-trigger {
+        display: none; } }
+  @media (min-width: 1281px) {
+    .site-header {
+      text-align: left;
+      padding: 25px 20px; }
+      .site-header .off-canvas-trigger {
+        display: none; } }
 
-.site-nav .btn {
-  margin-right: 5px; }
-  .site-nav .btn:before {
-    content: '';
-    display: block;
-    height: 5px;
-    width: 0;
-    position: absolute;
-    left: 50%;
-    top: 0;
-    opacity: 0;
-    transition: all 300ms ease-in;
-    background-image: -o-linear-gradient(left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%);
-    background-image: -moz-linear-gradient(left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%);
-    background-image: -webkit-linear-gradient(left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%);
-    background-image: -ms-linear-gradient(left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%);
-    background-image: linear-gradient(to left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%); }
-  .site-nav .btn:hover:before {
-    transition: all 300ms ease-in;
-    width: 100%;
-    left: 0;
-    opacity: 1; }
-  .site-nav .btn.link-resume:hover:before {
-    background: #408CCC; }
-  .site-nav .btn.link-prototypes:hover:before {
-    background: #96CEB4; }
-
-@media screen and (max-width: 760px) {
+.site-nav {
+  position: fixed;
+  width: 50%;
+  top: 0;
+  transition: all 500ms ease;
+  opacity: 0;
+  transition: all 700ms ease;
+  left: -50%; }
   .site-nav .btn {
-    width: 100%; } }
-
-@media screen and (min-width: 768px) {
-  .site-nav {
-    padding: 20px 240px;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: #fff;
-    box-sizing: border-box;
-    z-index: 2; } }
+    margin-right: 5px; }
+    .site-nav .btn:before {
+      content: '';
+      display: block;
+      height: 5px;
+      width: 0;
+      position: absolute;
+      left: 50%;
+      top: 0;
+      opacity: 0;
+      transition: all 300ms ease-in;
+      background-image: -o-linear-gradient(left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%);
+      background-image: -moz-linear-gradient(left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%);
+      background-image: -webkit-linear-gradient(left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%);
+      background-image: -ms-linear-gradient(left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%);
+      background-image: linear-gradient(to left, #FF6E69 0%, #FFFFFF 0%, #FF8F89 50%, #FF8F89 50%, #FFFFFF 100%); }
+    .site-nav .btn:hover:before {
+      transition: all 300ms ease-in;
+      width: 100%;
+      left: 0;
+      opacity: 1; }
+    .site-nav .btn.link-resume:hover:before {
+      background: #408CCC; }
+    .site-nav .btn.link-prototypes:hover:before {
+      background: #96CEB4; }
+  @media (max-width: 736px) {
+    .site-nav {
+      height: 100%; }
+      .site-nav .btn {
+        width: 100%; } }
+  @media (min-width: 737px) and (max-width: 1280px) {
+    .site-nav {
+      padding: 20px 240px;
+      text-align: center;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      box-sizing: border-box;
+      z-index: 3;
+      opacity: 1; } }
+  @media (min-width: 1281px) {
+    .site-nav {
+      padding: 20px 240px;
+      text-align: center;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      box-sizing: border-box;
+      z-index: 3;
+      opacity: 1; } }
 
 .background-image {
   background-repeat: no-repeat; }
