--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,17 @@
 ﻿@charset "UTF-8";
 html {
-  font-size: 16px;
-  font-family: 'Sumana', serif;
+  font-family: 'Droid Sans', sans-serif;
   color: #484848; }
-  @media screen and (min-width: 300px) {
-    html {
-      font-size: 18px;
-      line-height: 1.25; } }
 
 body {
+  font-size: 16px;
   margin: 0;
   overflow-x: hidden; }
 
 .heading, h1, h2, h3, h4 {
   margin: 0;
-  font-family: 'Droid Sans', sans-serif; }
+  font-family: 'Sumana', serif; }
 
-h1 {
-  font-size: 2.75rem; }
-
-h3 {
-  font-size: 2rem; }
-
-/*p {
-  font-size: .75rem;
-}*/
 ul li {
   margin-bottom: 0.75rem;
   list-style: none;
@@ -43,6 +30,30 @@ a {
 img {
   max-width: 100%; }
 
+@media (max-width: 736px) {
+  body {
+    line-height: 1.375; }
+  h1 {
+    font-size: 2rem; } }
+
+@media (min-width: 737px) and (max-width: 1280px) {
+  body {
+    font-size: 22px;
+    line-height: 1.375; }
+  h1 {
+    font-size: 4.5rem; }
+  h3 {
+    font-size: 3rem; } }
+
+@media (min-width: 1281px) {
+  body {
+    font-size: 140%;
+    line-height: 1.375; }
+  h1 {
+    font-size: 270%; }
+  h3 {
+    font-size: 200%; } }
+
 .btn {
   background: #F0F0F0;
   display: inline-block;
@@ -54,7 +65,7 @@ img {
     display: block; }
 
 section {
-  padding: 2rem;
+  padding: 1rem;
   width: 100%;
   box-sizing: border-box;
   position: relative; }
@@ -64,6 +75,12 @@ section {
     height: 75vh; }
   section.vh50 {
     height: 50vh; }
+  @media (min-width: 737px) and (max-width: 1280px) {
+    section {
+      padding: 2rem; } }
+  @media (min-width: 1281px) {
+    section {
+      padding: 2.75rem; } }
 
 .hero {
   position: absolute;
@@ -71,9 +88,11 @@ section {
   width: 320px;
   margin-left: -160px;
   text-align: center;
-  top: 0;
-  transform: scale(0.75); }
-  @media screen and (min-width: 768px) {
+  top: 0; }
+  @media (max-width: 736px) {
+    .hero {
+      top: 8%; } }
+  @media (min-width: 737px) and (max-width: 1280px) {
     .hero {
       width: 578px;
       margin-left: -284px;
@@ -173,19 +192,17 @@ ul.clear-styles, ul.clear-styles li {
 .margin-xxlg-left {
   margin-left: 2.75rem; }
 
-.off-canvas-trigger {
-  display: none; }
-
-@media screen and (min-width: 250px) and (max-width: 760px) {
-  .off-canvas {
-    padding-top: 50px;
-    position: relative;
-    transform: translate3d(0, 0, 0);
-    transition: transform 500ms ease; } }
-
-@media screen and (min-width: 768px) {
-  .off-canvas {
-    padding-top: 80px; } }
+.off-canvas {
+  background: #fff; }
+  @media screen and (min-width: 250px) and (max-width: 760px) {
+    .off-canvas {
+      padding-top: 50px;
+      position: relative;
+      transform: translate3d(0, 0, 0);
+      transition: transform 500ms ease; } }
+  @media screen and (min-width: 768px) {
+    .off-canvas {
+      padding-top: 80px; } }
 
 body.open .site-header, body.open .off-canvas {
   transform: translate3d(50%, 0, 0);
@@ -222,22 +239,24 @@ body.open .off-canvas-trigger {
     font-size: 26px;
     font-family: 'Droid Sans', sans-serif; }
   .site-header .off-canvas-trigger {
-    position: absolute;
-    display: table-cell;
-    left: 0;
-    top: 0;
-    text-decoration: none;
-    padding: 13px;
-    background: #484848;
-    color: #F0F0F0;
-    height: 50px;
-    width: 50px;
-    box-sizing: border-box;
-    vertical-align: middle; }
+    display: none; }
   @media (max-width: 736px) {
     .site-header {
       background: #fff;
-      height: 50px; } }
+      height: 50px; }
+      .site-header .off-canvas-trigger {
+        position: absolute;
+        display: table-cell;
+        left: 0;
+        top: 0;
+        text-decoration: none;
+        padding: 13px;
+        background: #484848;
+        color: #F0F0F0;
+        height: 50px;
+        width: 50px;
+        box-sizing: border-box;
+        vertical-align: middle; } }
   @media (min-width: 737px) and (max-width: 1280px) {
     .site-header {
       text-align: left;
