--- a/css/prototypes/off-canvas.css
+++ b/css/prototypes/off-canvas.css
@@ -1,30 +1,17 @@
 ﻿@charset "UTF-8";
 html {
-  font-size: 16px;
-  font-family: 'Sumana', serif;
+  font-family: 'Droid Sans', sans-serif;
   color: #484848; }
-  @media screen and (min-width: 300px) {
-    html {
-      font-size: 18px;
-      line-height: 1.25; } }
 
 body {
+  font-size: 16px;
   margin: 0;
   overflow-x: hidden; }
 
 .heading, h1, h2, h3, h4 {
   margin: 0;
-  font-family: 'Droid Sans', sans-serif; }
+  font-family: 'Sumana', serif; }
 
-h1 {
-  font-size: 2.75rem; }
-
-h3 {
-  font-size: 2rem; }
-
-/*p {
-  font-size: .75rem;
-}*/
 ul li {
   margin-bottom: 0.75rem;
   list-style: none;
@@ -42,6 +29,30 @@ a {
 
 img {
   max-width: 100%; }
+
+@media (max-width: 736px) {
+  body {
+    line-height: 1.375; }
+  h1 {
+    font-size: 2rem; } }
+
+@media (min-width: 737px) and (max-width: 1280px) {
+  body {
+    font-size: 22px;
+    line-height: 1.375; }
+  h1 {
+    font-size: 4.5rem; }
+  h3 {
+    font-size: 3rem; } }
+
+@media (min-width: 1281px) {
+  body {
+    font-size: 140%;
+    line-height: 1.375; }
+  h1 {
+    font-size: 270%; }
+  h3 {
+    font-size: 200%; } }
 
 .color-invert {
   color: #fff; }
