--- a/scss/components/_background-image.scss
+++ b/scss/components/_background-image.scss
@@ -71,3 +71,16 @@
         }
     }
 }
+
+
+.time {
+    display: block;
+    position: relative;
+    margin: 0 auto 18px;
+    height: 200px;
+    width: 200px;
+    background-image: url(#{$base-path}images/time-c.jpg);
+    border-radius: 24rem;
+    transition: all 300ms ease-in;
+    box-shadow: inset 0px 0px 0px 5px rgba(225,225,225, .5)
+}
