--- a/scss/pages/off-canvas.scss
+++ b/scss/pages/off-canvas.scss
@@ -1,8 +1,8 @@
 ﻿// Base Styles
-@import '../base/_variables.scss';
-@import '../base/_mixins.scss';
-@import '../base/_core.scss';
-@import '../base/_helper-classes.scss';
+@import 'scss/base/_variables.scss';
+@import 'scss/base/_mixins.scss';
+@import 'scss/base/_core.scss';
+@import 'scss/base/_helper-classes.scss';
 
 
 
