--- a/scss/pages/responsive-carousel.scss
+++ b/scss/pages/responsive-carousel.scss
@@ -1,11 +1,11 @@
 ﻿// Base Styles
-@import '../base/_variables.scss';
-@import '../base/_mixins.scss';
-@import '../base/_core.scss';
-@import '../base/_helper-classes.scss';
+@import 'scss/base/_variables.scss';
+@import 'scss/base/_mixins.scss';
+@import 'scss/base/_core.scss';
+@import 'scss/base/_helper-classes.scss';
 
 // Components
-@import "../components/background-image";
+@import "scss/components/background-image";
 
 // Prototype
 $headerSticky: 60px;
