css3 keyframe cleanup

--- a/scss/pages/nav-pure-css.scss
+++ b/scss/pages/nav-pure-css.scss
@@ -11,6 +11,10 @@ body {
     background: #fff;
     padding: 25px;
     border-radius: 20px;
+    width: 50px;
+    overflow: hidden;
+    white-space: nowrap;
+    transition: width 300ms ease-in;
 
     &__trigger {
         display: inline-block;
@@ -59,32 +63,32 @@ body {
         }
     }
 
-    input[type="checkbox"] {
-        display: none;
-    }
-
-    input[type="checkbox"]:checked {
-        & ~ .main-nav__trigger {
-            &:before, &:after {
-                //margin-top: 0;
-                //transition: margin 100ms ease, transform 600ms ease;
-            }
-            &:after {
-                animation: mainNavTriggerAfter 500ms ease-in ;
-                animation-fill-mode: forwards;
-            }
-            &:before {
-                animation: mainNavTriggerBefore 500ms ease-in ;
-                animation-fill-mode: forwards;
-            }
-        }
-        & ~ .main-nav__item {
-            opacity: 1;
-            animation: mainNavItems 1.3s ease-in-out;
-        }
-    }
 }
 
+#mainNavToggle {
+    display: none;
+}
+
+#mainNavToggle:checked {
+    & ~ .main-nav > .main-nav__trigger {
+        &:after {
+            animation: mainNavTriggerAfter 240ms ease-in ;
+            animation-fill-mode: forwards;
+        }
+        &:before {
+            animation: mainNavTriggerBefore 240ms ease-in ;
+            animation-fill-mode: forwards;
+        }
+    }
+    & ~ .main-nav .main-nav__item {
+        opacity: 1;
+        animation: mainNavItems 1.3s ease-in-out;
+    }
+    & ~ .main-nav {
+        width: 100%;
+        transition: width 300ms ease-in;
+    }
+}
 
 
 @keyframes mainNavTriggerAfter {
