--- a/scss/pages/nav-pure-css.scss
+++ b/scss/pages/nav-pure-css.scss
@@ -11,11 +11,11 @@ body {
     background: #fff;
     padding: 25px;
     border-radius: 20px;
-    width: 50px;
+    width: 100px;
     overflow: hidden;
     white-space: nowrap;
     transition: width 300ms ease-in;
-
+    box-sizing: border-box;
     &__trigger {
         display: inline-block;
         vertical-align: middle;
@@ -54,9 +54,6 @@ body {
         text-decoration: none;
         opacity: 0;
         transition: opacity 250ms ease;
-        /*transform: rotateY(-70deg);
-        transition: opacity 250ms ease, transform 250ms ease;
-        transition-delay: transform 100ms;*/
 
         &:hover {
             color: $color-primary;
