--- a/scss/base/_grid.scss
+++ b/scss/base/_grid.scss
@@ -13,9 +13,28 @@ section {
     > p {
         margin-top: 0;
     }
+    &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        left: -3px;
+        top: 0;
+        width: 3px;
+        background: $color-primary;
+        height: 100%;
+        visibility: hidden;
+        transition: left 230ms ease-in;
+    }
     &:hover {
         background: $color-medium-lite;
         transition: background 250ms ease-in;
+        &:after {
+            visibility: visible;
+        }
+        &:after {
+            left: 0;
+            transition: left 230ms ease-in;
+        }
     }
     &.vh75 {
         height: 75vh;
